# Robotics-Projects

./: README.md
first_project/: CMakeLists.txt  Project_info  package.xml  project.bag
first_project/cfg/: flag.cfg
first_project/include/: conversion.h  converter.h  distance_calculator.h  distance_publisher.h
first_project/launch/: first_project.launch
first_project/msg/: dist.msg
first_project/src/: conversion.cpp  converter.cpp  distance_calculator.cpp  distance_publisher.cpp  prova.cpp
first_project/srv/: distance_calculate.srv
second_project/: CMakeLists.txt  VisualOdomMap.launch  package.xml  project_info  prova.txt
second_project/Launch/: OptitrackMap.launch  VisualOdomMap.launch  amcl.launch.xml  amcl_localization.launch
second_project/Maps/: OptiTrackMap.pgm  OptiTrackMap.yaml  VisualOdomMap.pgm  VisualOdomMap.yaml  map8.pgm  map8.yaml
second_project/cfg/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
second_project/rviz/: robot_navigation.rviz
second_project/src/: odomPub.cpp
